spade-tests/src/snapshots/spade_tests__typeinference__reading_from_tuple_members_is_an_error.snap
---
source: spade-tests/src/typeinference.rs
---
mod std {mod ports { entity read_mut_wire<T>(t: &mut T) -> T __builtin__ }}

use std::ports::read_mut_wire;

fn takes_normal(x: bool, y: int<3>) -> bool __builtin__

entity uut(val: &mut (bool, int<3>)) -> bool {
    let x = inst read_mut_wire(val#0);
    let y = inst read_mut_wire(val#1);
    takes_normal(x, y)
}


error: Attempt to use tuple indexing on non-tuple
  ┌─ testinput:8:32
  │
8 │     let x = inst read_mut_wire(val#0);
  │                                ^^^ expected tuple
  │
  = Expected: tuple
  =      Got: &mut (bool, int<3>)


